adicionie um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>olá mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita voluptatem pariatur nesciunt ratione ducimus saepe atque laudantium illo vitae cupiditate provident rem excepturi labore consequatur, in id iure rerum magnam.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur enim, doloribus omnis atque quod ad doloremque veniam rerum? Rerum accusamus sunt temporibus saepe? Obcaecati sequi nemo sapiente possimus. Sapiente, sunt.</p>
 </body>
 </html>
